--- a/src/zeit/web/core/templates/inc/tracking/webtrekk.html
+++ b/src/zeit/web/core/templates/inc/tracking/webtrekk.html
@@ -13,7 +13,9 @@
         {% set pagination = view.pagination.current ~'/'~ view.pagination.total -%}
     {% endif -%}
 
-    var Z_WT_KENNUNG = "redaktion.{{ view.ressort  }}.{{ view.sub_ressort }}.{{ view.serie }}.{{ view.type }}.online|{{ request.host + request.path }}";
+    {% set wt_kennung = 'redaktion.' + view.ressort|lower + '.' + view.sub_ressort|lower + '.' + view.serie|lower + '.' + view.type|lower + '.online' %}
+
+    var Z_WT_KENNUNG = "{{ wt_kennung }}|{{ request.host + request.path }}";
 
     var webtrekk = {
         linkTrack : "standard",
@@ -60,13 +62,10 @@
 </script>
 <noscript>
     <div>
-        <img alt="" width="1" height="1" src="{{ "%s.%s.%s.%s.%s.online.%s,0,0,0,0,0,0,0,0&cg1=%s&cg2=%s&cg3=%s&cg4=%s&cg5=%s&cg6=%s&cg7=%s&cg8=%s&cg9=%s" | 
+        <img alt="" width="1" height="1" src="{{ "%s,%s.%s,0,0,0,0,0,0,0,0&cg1=%s&cg2=%s&cg3=%s&cg4=%s&cg5=%s&cg6=%s&cg7=%s&cg8=%s&cg9=%s" | 
             format(
-                "http://zeit01.webtrekk.net/981949533494636/wt.pl?p=311,redaktion",
-                view.ressort | lower,
-                view.sub_ressort | lower,
-                view.serie | lower,
-                view.type | lower,
+                "http://zeit01.webtrekk.net/981949533494636/wt.pl?p=311",
+                wt_kennung,
                 request.path_info,
                 "redaktion",
                 view.tracking_type | lower,
