--- a/sass/web.site/modules/_article.sass
+++ b/sass/web.site/modules/_article.sass
@@ -53,10 +53,10 @@
 		text-decoration: underline
 
 .metadata
-	color: $zon_mid_grey
+	color: $zon_grey
 	font-size: remify(14px)
 	letter-spacing: $zon-letter-spacing-s
-	margin-bottom: remify($petite--px)
+	margin-bottom: remify(40px)
 
 .stage--large
 	width: auto
