--- a/src/zeit/web/site/templates/article.html
+++ b/src/zeit/web/site/templates/article.html
@@ -36,8 +36,8 @@
             </span>
             {% endif -%}
 
-            <time class="metadata__date encoded-date" datetime="{{ view.date_last_modified | format_date('iso8601') }}" data-obfuscated="{{ view.obfuscated_date }}">
-                {{ view.date_last_modified | format_date(view.show_date_format) }}
+            <time class="metadata__date{% if view.obfuscated_date %} encoded-date" data-obfuscated="{{ view.obfuscated_date }}{% endif %}" datetime="{{ view.date_last_modified | format_date('iso8601') }}">
+                {{- view.date_last_modified | format_date(view.show_date_format) -}}
             </time>
         </div>
         <div class="article-body">
