--- a/sass/web.site/modules/video/_video-large-title.sass
+++ b/sass/web.site/modules/video/_video-large-title.sass
@@ -8,7 +8,8 @@
 	+respond-min($break-phablet-min)
 		bottom: remify(66px)
 	+respond-min($break-desktop-min)
-		bottom: remify(-66px)
+		bottom: auto
+		padding-top: remify(20px)
 	&__kicker
 		display: block
 		font-size: remify(14px)
