--- a/sass/web.site/modules/video/_video-stage-heading.sass
+++ b/sass/web.site/modules/video/_video-stage-heading.sass
@@ -22,3 +22,7 @@
 		+image_text_replacement(inline-block, text-bottom)
 		+respond-min($break-phablet-min)
 			width: remify(197px)
+		+old-ie
+			background: none !important
+			text-indent: 0
+			width: auto
