--- a/sass/web.site/modules/_nav.sass
+++ b/sass/web.site/modules/_nav.sass
@@ -157,43 +157,7 @@ $zon-search-square-size: remify(35px)
 	+respond-min($break-tablet-min)
 		+order(60)
 
-//box 4: services
-.main_nav__services
-	@extend %main_nav_links
-	+add_nav_bar_style($zon-bar-height-phablet,true)
-	line-height: $zon-bar-height-phablet
-	+order(40)
-	padding-left: 0
-	ul
-		+display-flex()
-		+justify-content(space-between)
-		text-align: center
-		height: em($zon-bar-height-phablet-px - 1)
-		li
-			width: 33%
-			margin-right: 0
-			&:nth-child(n+4)
-				display: none
-			&:nth-child(2)
-				border-left: 1px solid $zon_light_grey
-				border-right: 1px solid $zon_light_grey
-	+respond-min($break-tablet-min)
-		+remove_nav_bar_style()
-		+order(10)
-		width: 55%
-		text-align: left
-		ul
-			display: inline-block
-			height: auto
-			li
-				width: auto
-				margin-right: $little
-				&:nth-child(n+4)
-					display: inline-block
-				&:nth-child(2)
-					border: 0
-
-//box 5: classifieds
+// box 4: classifieds
 .main_nav__classifieds
 	@extend %main_nav_links
 	+add_nav_bar_style(auto)
@@ -216,6 +180,43 @@ $zon-search-square-size: remify(35px)
 				width: 33%
 	+respond-min($break-tablet-min)
 		+remove_nav_bar_style()
+		+order(10)
+		width: 55%
+		text-align: left
+		& > ul
+			margin-right: $petite
+			display: inline-block
+			& > li
+				width: auto
+				margin-right: $little
+				&:nth-child(n+6)
+					display: none
+		& [data-feature='dropdown']
+			display: inline-block
+
+
+// box 5: services
+.main_nav__services
+	@extend %main_nav_links
+	+add_nav_bar_style($zon-bar-height-phablet,true)
+	line-height: $zon-bar-height-phablet
+	+order(40)
+	padding-left: 0
+	ul
+		+display-flex()
+		+justify-content(space-between)
+		text-align: center
+		height: em($zon-bar-height-phablet-px - 1)
+		li
+			width: 33%
+			margin-right: 0
+			&:nth-child(n+4)
+				display: none
+			&:nth-child(2)
+				border-left: 1px solid $zon_light_grey
+				border-right: 1px solid $zon_light_grey
+	+respond-min($break-tablet-min)
+		+remove_nav_bar_style()
 		+order(20)
 		width: 38%
 		text-align: right
@@ -227,13 +228,9 @@ $zon-search-square-size: remify(35px)
 				width: auto
 				margin-right: $little
 				&:nth-child(n+4)
-					display: none
-		& [data-feature='dropdown']
-			display: inline-block
-	+respond-min($break-desktop-min)
-		ul
-			li
-				width: auto
+					display: inline-block
+				&:nth-child(2)
+					border: none
 
 //box 6: search
 .main_nav__search
