--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -86,22 +86,26 @@
             </div>
         {% endblock adplace_top %}
         <div class="page__content">
+            {% profile %}
             <header class="header" role="banner">
                 {% block navigation %}
                     {%- include "zeit.web.site:templates/inc/navigation.html" ignore missing -%}
                 {% endblock navigation %}
             </header>
+            {% endprofile %}
             {% block adplace_billboard %}
                 {{ lama_core.adplace(view.banner(3), view) }}
             {% endblock adplace_billboard %}
             <main class="main" id="main" role="main">
-                {% block main %}Hallo Welt{% endblock main %}
+                {% block main %}{% endblock main %}
             </main>
+            {% profile %}
             <footer class="footer" role="contentinfo">
                 {% block footer %}
                     {%- include "zeit.web.site:templates/inc/footer.html" ignore missing -%}
                 {% endblock footer %}
             </footer>
+            {% endprofile %}
         </div>
     </div>
     {% include "zeit.web.core:templates/inc/tracking/webtrekk.html" ignore missing %}
