--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -88,7 +88,7 @@
         <div class="page__content">
             <header class="header" role="banner">
                 {% block navigation %}
-                    {%- include "zeit.web.site:templates/inc/navigation.html" ignore missing -%}
+                    {%- include "zeit.web.site:templates/inc/navigation/navigation.tpl" ignore missing -%}
                 {% endblock navigation %}
             </header>
             {% block adplace_billboard %}
