ZON-1453/4: Cherry Pick code into branch
… and update it with the actual code from iqd.

--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -56,15 +56,16 @@
         <link href="{{ request.asset_url('css/icons/site.fallback.css') }}" rel="stylesheet">
     </noscript>
 
-    {% include "zeit.web.core:templates/inc/tracking/iqd_head.html" ignore missing %}
-    {% include "zeit.web.core:templates/inc/tracking/iqd_krux_head.html" ignore missing %}
+    {% include "zeit.web.core:templates/inc/ads/iqd_head.html" ignore missing %}
 </head>
 <body itemscope itemtype="http://schema.org/WebPage" data-page-type="{{ view.type }}"  data-unique-id="{{ context.uniqueId }}">
     <!-- tracking at top -->
     {% include "zeit.web.core:templates/inc/tracking/ivw_ver2.html" ignore missing %}
     {% include "zeit.web.core:templates/inc/tracking/ivw_ver1.html" ignore missing %}
-    {% include "zeit.web.core:templates/inc/tracking/iqd_nuggad.html" ignore missing %}
-    {% include "zeit.web.core:templates/inc/tracking/iqd_krux.html" ignore missing %}
+    {% if (view.deliver_ads_oldschoolish) %}
+        {% include "zeit.web.core:templates/inc/tracking/iqd_nuggad.html" ignore missing %}
+        {% include "zeit.web.core:templates/inc/tracking/iqd_krux.html" ignore missing %}
+    {% endif %}
     {% block skiplink %}
     <a class="skiplink" href="#main" id="top" title="Direkt zum Inhalt springen">Inhalt</a>
     {% endblock skiplink %}
