--- a/src/zeit/web/core/templates/inc/ads/iqd_head_adctrl.html
+++ b/src/zeit/web/core/templates/inc/ads/iqd_head_adctrl.html
@@ -1,6 +1,7 @@
+<!-- ad controller head start -->
 <!-- gzip testing -->
 <script>var gzipEnabled = false;</script>
-<script type="text/javascript" src="https://s3-eu-west-1.amazonaws.com/prod.iqadcontroller.iqdigital/iqd_gzip_test.js.gz"></script>
+<script type="text/javascript" src="https://s3-eu-central-1.amazonaws.com/prod.iqdcontroller.iqdigital/iqd_gzip_test.js.gz"></script>
 
 <!-- adcontroller load -->
 <script type="text/javascript">
@@ -15,18 +16,20 @@
         // conditionalize output of cdn directory for mobile, to prevent code replication
         mob_suffix = ZMO.isMobileView() ? '_mob' : '';
 
-    document.write('<scr' + 'ipt src="https://s3-eu-west-1.amazonaws.com/prod.iqadcontroller.iqdigital/cdn_zeit' + mob_suffix + '/' + iqd_mode + '/iqadcontroller.js' + gz_suffix + '"></scr' + 'ipt>');
+    document.write('<scr' + 'ipt src="https://s3-eu-central-1.amazonaws.com/prod.iqdcontroller.iqdigital/cdn_zeit' + mob_suffix + '/' + iqd_mode + '/iqadcontroller.js' + gz_suffix + '"></scr' + 'ipt>');
 </script>
 
 <!-- mandanten object -->
 <script type="text/javascript">
-    AdController.setPageInfo({
+    var pageInfo = {
         $handle: '{% if view.banner_type %}{{ view.banner_type }}{% endif %}',
         $autoSizeFrames: true,
         level2: '{% if view.ressort %}{{ view.ressort }}{% endif %}',
         level3: '{% if view.sub_ressort %}{{ view.sub_ressort }}{% endif %}',
         keywords: '{% if view.adwords %}{{ view.adwords|join(',') }}{% endif %}',
         tma: ''
-    });
+    };
+    AdController.setPageInfo(pageInfo);
     AdController.initialize();
 </script>
+<!-- ad controller head end -->
