--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -62,10 +62,12 @@
     <!-- tracking at top -->
     {% include "zeit.web.core:templates/inc/tracking/ivw_ver2.html" ignore missing %}
     {% include "zeit.web.core:templates/inc/tracking/ivw_ver1.html" ignore missing %}
-    {% if (view.deliver_ads_oldschoolish) %}
+    {% if (view.deliver_ads_oldschoolish) -%}
         {% include "zeit.web.core:templates/inc/tracking/iqd_nuggad.html" ignore missing %}
         {% include "zeit.web.core:templates/inc/tracking/iqd_krux.html" ignore missing %}
-    {% endif %}
+    {%- else -%}
+        {% include "zeit.web.core:templates/inc/ads/iqd_static_oop_tag.html" ignore missing %}
+    {%- endif %}
     {% block skiplink %}
     <a class="skiplink" href="#main" id="top" title="Direkt zum Inhalt springen">Inhalt</a>
     {% endblock skiplink %}
