ZON-1461: LoVe-HAte (:link, :visited, :hover, :active)

--- a/sass/web.site/modules/_teaser-column.sass
+++ b/sass/web.site/modules/_teaser-column.sass
@@ -66,8 +66,8 @@ $teaser-column-mobile-image-size: 80px
 		color: $zon-charcoal
 		a:link &,
 		a:visited &,
-		a:active &,
-		a:hover &
+		a:hover &,
+		a:active &
 			color: $grey--mid
 		+respond-min($break-desktop-min)
 			display: inline
