ZON-1461: Add pagination

--- a/sass/web.site/_constants.sass
+++ b/sass/web.site/_constants.sass
@@ -44,8 +44,11 @@ $color-text: $black
 $color-text-highlighted: $zon-red
 $color-canvas-bg: $white
 $color-quote: $grey--dark
-$color-link--default: $grey
+$color-link--default: $zon_grey
+$color-link--visited: $zon_grey
 $color-link--hover: $black
+$color-link--active: $black
+$color-link--focus: $black
 $color-input: $grey--mid
 $color-input-bg: $grey--light
 $color-border: $zon-alto
