--- a/sass/web.site/modules/_article.sass
+++ b/sass/web.site/modules/_article.sass
@@ -24,7 +24,8 @@
 	+respond-min($break-desktop-min)
 		font-size: remify(42px)
 
-.summary
+.summary,
+.page-teaser
 	color: $grey--mid
 	font-size: remify(18px)
 	line-height: 1.5
