--- a/sass/web.site/modules/_defaults.sass
+++ b/sass/web.site/modules/_defaults.sass
@@ -20,5 +20,6 @@ img
 	height: auto !important
 
 a
-	+link-colors($color-link--default, $color-link--hover, $color-link--hover, $color-link--default, $color-link--hover)
+	// normal, hover, active, visited, focus
+	+link-colors($color-link--default, $color-link--hover, $color-link--active, $color-link--visited, $color-link--focus)
 	text-decoration: none
