--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -209,12 +209,12 @@
 	display: inline-block
 	font-size: $font-size
 	font-weight: bold
-	letter-spacing: 0.05em
+	letter-spacing: $zon-letter-spacing-m
 	margin: $margin
 	padding: $padding
 	text-align: center
 	text-transform: uppercase
-	+single-transition(all, 0.15s, ease-in-out)
+	+transition(all .15s ease-in-out)
 	&:visited
 		color: $visited-color
 	&:hover
@@ -224,7 +224,7 @@
 		cursor: pointer
 
 =zon-button-inky
-	+zon-button($zon_dark_grey, $zon_grey, $zon_dark_grey, $zon_grey, $white, $zon-alto, $white)
+	+zon-button($zon_dark_grey, $zon_grey, $zon_dark_grey, $zon_grey, $white, $zon-alto, $white, $margin: 0, $padding: remify(5px) 1em remify(4px))
 
 =zon-button-dark
 	+zon-button(rgba(0,0,0, 0.2), rgba(0,0,0, 0.5), $zon_mid_grey, $zon-alto, $zon_lighter_grey, $white, $zon-alto)
