ZON-1455: Rewrite template structure for ads
Cause a) they are not tracking and b) it's easier to switch over directory names.

--- a/src/zeit/web/core/templates/inc/ads/adcontroller/head.html
+++ b/src/zeit/web/core/templates/inc/ads/adcontroller/head.html
@@ -1,3 +1,4 @@
+{% if view.context.advertising_enabled %}
 <!-- ad controller head start -->
 <!-- gzip testing -->
 <script>var gzipEnabled = false;</script>
@@ -34,3 +35,4 @@
     }
 </script>
 <!-- ad controller head end -->
+{% endif %}
