--- a/src/zeit/web/core/templates/inc/tracking/ivw_ver2.html
+++ b/src/zeit/web/core/templates/inc/tracking/ivw_ver2.html
@@ -1,7 +1,8 @@
 <!-- ivw ver2 tracking -->
 <!-- SZM VERSION="2" -->
 <script type="text/javascript">
-
+    var Z_IVW_RESSORT = "{{ view.banner_channel }}";
+    var IVW="http://zeitonl.ivwbox.de/cgi-bin/ivw/CP/{{ view.banner_channel }}";
     //set breakpoint for mobile tracking
     ivw_min_width = 767;
 
