--- a/sass/web.site/modules/_teaser-parquet-large.sass
+++ b/sass/web.site/modules/_teaser-parquet-large.sass
@@ -16,8 +16,10 @@
 			padding: remify(0 $petite--px $petite--px 0)
 			vertical-align: top
 			width: remify( (158px + $petite--px) )
-		+respond-min($break-desktop-min)
-			width: remify( (360px + $petite--px) )
+		+respond-min($break-tablet-min)
+			display: block
+			padding: 0
+			width: 100%
 
 	&__media-item
 		@extend %teaser-media-item
