ZON-1391: parquet: style teasers differently
- black teaser text
- increase font-size for large teaser title

--- a/sass/web.site/modules/_teaser-large.sass
+++ b/sass/web.site/modules/_teaser-large.sass
@@ -10,7 +10,7 @@
 		margin-bottom: remify(8px)
 	&__title
 		@extend %teaser-title
-		font-size: $font-mxxl
+		font-size: remify($font-mxxl--px)
 	&__media
 		@extend %teaser-media
 	&__media-item
