--- a/sass/web.site/modules/_teaser-parquet-large.sass
+++ b/sass/web.site/modules/_teaser-parquet-large.sass
@@ -31,8 +31,10 @@
 		@extend %teaser-kicker
 	&__title
 		@extend %teaser-title
+		font-size: remify($font-mxxl--px)
 	&__text
 		@extend %teaser-text
+		color: $black
 	&__byline
 		@extend %teaser-byline
 	&__metadata
