--- a/src/zeit/web/magazin/templates/layout.html
+++ b/src/zeit/web/magazin/templates/layout.html
@@ -64,14 +64,14 @@
             <script src="{{request.asset_url('js/libs/iqd/sasmobile.js')}}"></script>
             <!-- <![endif]-->
         {% endif %}
-        {% include "zeit.web.core:templates/inc/ads/%s/head.html" % view.adtemplate_path ignore missing %}
+        {% include "zeit.web.core:templates/inc/ads/%s/head.html" % view.ad_delivery_type ignore missing %}
     </head>
-    <body itemscope itemtype="http://schema.org/WebPage">
+    <body itemscope itemtype="http://schema.org/WebPage" data-adDeliveryType="{{view.ad_delivery_type}}">
         <!-- tracking at top -->
         {% include "zeit.web.core:templates/inc/tracking/ivw_ver2.html" ignore missing %}
-        {% include "zeit.web.core:templates/inc/ads/%s/iqd_nuggad.html" % view.adtemplate_path ignore missing %}
-        {% include "zeit.web.core:templates/inc/ads/%s/iqd_krux.html" % view.adtemplate_path ignore missing %}
-        {% include "zeit.web.core:templates/inc/ads/%s/static_oop_tag.html" % view.adtemplate_path ignore missing %}
+        {% include "zeit.web.core:templates/inc/ads/%s/iqd_nuggad.html" % view.ad_delivery_type ignore missing %}
+        {% include "zeit.web.core:templates/inc/ads/%s/iqd_krux.html" % view.ad_delivery_type ignore missing %}
+        {% include "zeit.web.core:templates/inc/ads/%s/static_oop_tag.html" % view.ad_delivery_type ignore missing %}
 
         <div class="page-wrap">
 
@@ -160,7 +160,7 @@
 
         <script type="text/javascript" src="//admin.brightcove.com/js/BrightcoveExperiences.js"></script>
 
-        {% include "zeit.web.core:templates/inc/ads/%s/finalize.html" % view.adtemplate_path ignore missing %}
+        {% include "zeit.web.core:templates/inc/ads/%s/finalize.html" % view.ad_delivery_type ignore missing %}
 
         <!-- tracking at end -->
         {% include "zeit.web.core:templates/inc/tracking/google.html" ignore missing %}
