--- a/sass/web.site/modules/_article.sass
+++ b/sass/web.site/modules/_article.sass
@@ -24,8 +24,16 @@
 	+respond-min($break-desktop-min)
 		font-size: remify(42px)
 
+.article-page__page-teaser
+	color: $zon-charcoal
+	font-size: remify(20px)
+	line-height: 1.25
+	margin: 2em 0 1em
+	+respond-min($break-desktop-min)
+		font-size: remify(24px)
+
 .summary,
-.page-teaser
+.article__page-teaser
 	color: $grey--mid
 	font-size: remify(18px)
 	line-height: 1.5
