--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -15,6 +15,7 @@
 @import "modules/defaults"
 @import "modules/basics"
 @import "modules/fonts"
+@import "modules/header"
 @import "modules/nav"
 @import "modules/main"
 @import "modules/footer"
