--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -90,6 +90,8 @@
                 {% block navigation %}
                     {%- include "zeit.web.site:templates/inc/navigation/navigation.tpl" ignore missing -%}
                 {% endblock navigation %}
+                {% block metadata %}
+                {% endblock metadata %}
             </header>
             {% block adplace_billboard %}
                 {{ lama_core.adplace(view.banner(3), view) }}
