ZON-1391: teaser-text less dark

--- a/sass/web.site/modules/_teaser.sass
+++ b/sass/web.site/modules/_teaser.sass
@@ -87,7 +87,7 @@
 	width: 100%
 
 %teaser-text
-	color: $zon_grey
+	color: $zon_dark_grey
 	font-size: remify(17px)
 	line-height: 1.4
 	margin: 0 0 remify(4px) 0
