ZON-1391: Sass: make $zon_grey accessible

--- a/sass/web.site/modules/_teaser.sass
+++ b/sass/web.site/modules/_teaser.sass
@@ -95,7 +95,7 @@
 		font-size: remify(15px)
 
 %teaser-byline
-	color: $zon_mid_grey
+	color: $zon_grey
 	display: block
 	font-size: $font-ss
 	line-height: 1.3846
@@ -103,7 +103,7 @@
 	margin-bottom: remify(4px)
 
 %teaser-metadata
-	color: $zon_mid_grey
+	color: $zon_grey
 	font-size: $font-ss
 	line-height: 1.3846
 	letter-spacing: $zon-letter-spacing-s
