--- a/sass/web.site/modules/_teaser.sass
+++ b/sass/web.site/modules/_teaser.sass
@@ -110,7 +110,7 @@
 
 %teaser-datetime
 	&:not(:last-child):not(:empty):after
-		content: ' \29F8 ' // ⧸ = Big solidus
+		content: ' / '
 		margin: 0 $micro 0 $micro
 
 %teaser-commentcount
