ZON-1391: parquet font-size-tweaking
credits go to Eagle Eye Brünjes

--- a/sass/web.site/modules/_teaser-parquet-large.sass
+++ b/sass/web.site/modules/_teaser-parquet-large.sass
@@ -29,6 +29,7 @@
 		@extend %teaser-combined-link
 	&__kicker
 		@extend %teaser-kicker
+		margin-bottom: remify(8px)
 	&__title
 		@extend %teaser-title
 		font-size: remify($font-mxxl--px)
