[Fix]: fix Momentaufnahme Text missing

--- a/src/zeit/web/site/templates/inc/cp_area_snapshot.html
+++ b/src/zeit/web/site/templates/inc/cp_area_snapshot.html
@@ -9,7 +9,7 @@
     <a href="{{ href }}" class="snapshot-readmore"><span class="snapshot-readmore__item">Gesammelte Momente</span></a>
     {% include "zeit.web.site:templates/inc/teaser_asset/snapshot-image.tpl" ignore missing with context %}
     <div class="snapshot-caption">
-        {{ image.title | trim | default('') }} {{ cp.image_copyright(image.copyright, 'snapshot-caption') }}</span>
+        {{ image.attr_title | trim | default('') }} {{ cp.image_copyright(image.copyright, 'snapshot-caption') }}</span>
     </div>
 </div>
 {%- endif %}
