ZON-1466: Change layout mapping API to require block instead of id

--- a/src/zeit/web/site/templates/inc/cp_area_main.html
+++ b/src/zeit/web/site/templates/inc/cp_area_main.html
@@ -1,7 +1,7 @@
 <div class="teaser-collection teaser-collection--main">
     <div class="teasers teasers--main">
         {% for layout, teaser, teaser_block in view.area_main -%}
-            {% include ["zeit.web.site:templates/inc/teaser/" + layout | get_mapped_teaser + ".tpl",
+            {% include ["zeit.web.site:templates/inc/teaser/" + teaser_block | get_teaser_layout + ".tpl",
                         "zeit.web.site:templates/inc/teaser/default.tpl"] %}
         {% endfor %}
     </div>
