--- a/src/zeit/web/site/templates/inc/cp_area_fullwidth.html
+++ b/src/zeit/web/site/templates/inc/cp_area_fullwidth.html
@@ -1,7 +1,7 @@
 <div class="teasers-fullwidth">
     {% for layout, teaser, teaser_block in view.area_fullwidth -%}
         {% include
-            ["zeit.web.site:templates/inc/teaser/" + layout | get_mapped_teaser + ".tpl",
+            ["zeit.web.site:templates/inc/teaser/" + teaser_block | get_teaser_layout + ".tpl",
              "zeit.web.site:templates/inc/teaser/default.tpl"] %}
     {% endfor %}
 </div>
