ZON-1315: Import styles for inline gallery

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -62,3 +62,6 @@
 @import "modules/comments/comment-section"
 @import "modules/comments/comment-form"
 @import "modules/comments/comment"
+
+// gallery
+@import "modules/inline-gallery"
