ZON-1079: CSS Fu

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -34,6 +34,7 @@
 @import "modules/teaser/teaser-parquet-large"
 @import "modules/teaser/teaser-printbox"
 @import "modules/teaser/teaser-beta"
+@import "modules/teaser/teaser-blog"
 // snapshot
 @import "modules/snapshot"
 // video-stage
