ZON-1314: Avoid naming divergence from view.Content

--- a/src/zeit/web/site/templates/gallery.html
+++ b/src/zeit/web/site/templates/gallery.html
@@ -1,4 +1,4 @@
-{% extends "zeit.web.site:templates/cms_content.html" %}
+{% extends "zeit.web.site:templates/content.html" %}
 {% import "zeit.web.site:templates/macros/article_macro.tpl" as blocks with context %}
 {% block article_pages %}
     <div class="article-page">
