--- a/sass/web.site/modules/_defaults.sass
+++ b/sass/web.site/modules/_defaults.sass
@@ -10,6 +10,15 @@ body
 	margin: 0
 	padding: 0
 
+img
+	display: block
+	height: auto
+	max-width: 100%
+
+*[id^='iqadtile'] noscript img
+	width: auto !important
+	height: auto !important
+
 a
 	// normal, hover, active, visited, focus
 	+link-colors($color-link--default, $color-link--hover, $color-link--active, $color-link--visited, $color-link--focus)
