--- a/sass/web.site/modules/_pagination.sass
+++ b/sass/web.site/modules/_pagination.sass
@@ -64,6 +64,6 @@
         &__who
             display: none
         &__what
+            display: inline-block // needed for text-transform to work
             &:first-letter
-                color: inherit
                 text-transform: uppercase
