--- a/src/zeit/web/magazin/templates/longform.html
+++ b/src/zeit/web/magazin/templates/longform.html
@@ -12,7 +12,7 @@
 {% endblock page_wrap_inner %}
 
 {% block navigation %}
-    <nav class="main-nav is-full-width is-compact" itemscope itemtype="http://schema.org/SiteNavigationElement">
+    <nav id="js-main-nav" class="main-nav is-full-width is-compact" itemscope itemtype="http://schema.org/SiteNavigationElement">
         <div class="main-nav__wrap">
             {% block longform_logo %}
             <a href="http://{{ request.host }}/zeit-magazin/index" class="main-nav__logo" itemscope itemtype="http://schema.org/Organization" id="hp.zm.topnav.logo./zeit-magazin/index">
